[gd_scene load_steps=3 format=2]

[ext_resource path="res://Themes/UI_menu.tres" type="Theme" id=1]
[ext_resource path="res://Objects/GameUI/PauseMenu.gd" type="Script" id=2]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 160.0
margin_right = 6.10352e-05
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 96.0
margin_bottom = 240.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_right = 96.0
margin_bottom = 240.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="Panel/VBoxContainer"]
margin_top = 94.0
margin_right = 96.0
margin_bottom = 101.0
text = "Resume"

[node name="End Turn" type="Button" parent="Panel/VBoxContainer"]
margin_top = 105.0
margin_right = 96.0
margin_bottom = 112.0
text = "End Turn"

[node name="Settings" type="Button" parent="Panel/VBoxContainer"]
margin_top = 116.0
margin_right = 96.0
margin_bottom = 123.0
text = "Settings"

[node name="Rules" type="Button" parent="Panel/VBoxContainer"]
margin_top = 127.0
margin_right = 96.0
margin_bottom = 134.0
text = "Rules"

[node name="Exit" type="Button" parent="Panel/VBoxContainer"]
margin_top = 138.0
margin_right = 96.0
margin_bottom = 145.0
text = "Exit"
[connection signal="pressed" from="Panel/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/End Turn" to="." method="_on_End_Turn_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Rules" to="." method="_on_Rules_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
